# cw07-corrected

./: CMakeLists.txt
POSIX/: posix.c  posix.h
SystemV/: common.c  common.h  defines.h  loader.c  systemv.c  trucker.c  worker.c  worker.h
utils/: utils.c  utils.h
